# valor

./: .gitignore  Cargo.toml  Draw sequence.drawio  Makefile  README.md  config.default.ron  config.ron  rustfmt.toml
common/src/: lib.rs  map.rs
creature/: Cargo.toml
creature/src/: lib.rs
formats/: Cargo.toml
formats/src/: def.rs  lib.rs  lod.rs  pcx.rs  snd.rs
game/: Cargo.toml
game/src/: animations.rs  animator.rs  battlestate.rs  command.rs  config.rs  creature.rs  creature_stack.rs  error.rs  event.rs  gamestate.rs  graphics.rs  gridpos.rs  gui.rs  input.rs  main.rs  map.rs  pathfinding.rs  registry.rs  resources.rs  sdl.rs  sound.rs  stack.rs
game/src/animations/: animation.rs  choreographer.rs  current_event.rs  events.rs  movement.rs
game/src/battlestate/: army.rs  commands.rs  damage.rs  draw.rs  hero.rs  input.rs  mod.rs  turns.rs
game/src/battlestate/commands/: attack.rs  cast.rs  defend.rs  move.rs  shoot.rs  wait.rs
game/src/gamestate/: hero.rs  turns.rs
game/src/gamestate/commands/: attack.rs  cast.rs  move.rs  shoot.rs
game/src/graphics/: animation.rs  animations.rs  creature.rs  creature_stack.rs  cursors.rs  hero.rs  spritesheet.rs  stack.rs  statics.rs
game/src/graphics/animations/: animation.rs  choreographer.rs  current_event.rs  entity_animations.rs  event.rs  events.rs  movement.rs  time_progress.rs
game/src/graphics/spritesheet/: button_state.rs  creature.rs  hero.rs  sprite.rs
game/src/grid/: gridpos.rs
game/src/gui/: textures.rs
game/src/input/: hexagon_part.rs
game/src/registry/: creature_resources.rs  def.rs  image.rs  images.rs  spells_cache.rs  spritesheets.rs
game/src/resources/: caches.rs  creature_resources.rs  images.rs  mod.rs  registry.rs  spells_cache.rs  spritesheets.rs
game/src/resources/formats/: mod.rs
gamedata/: Cargo.toml
gamedata/src/: battlefield.rs  battlefields.rs  creature.rs  creatures.rs  cursors.rs  gui.rs  heroes.rs  lib.rs  spells.rs  towns.rs  traits.rs
gridpos/: Cargo.toml
gridpos/src/: attack_direction.rs  gridpos.rs  hexagon_part.rs  lib.rs
logic/: Cargo.toml
logic/src/: event.rs  gamestate.rs  grid.rs  lib.rs  pathfinding.rs  stack.rs  turn.rs
logic/src/gamestate/: army.rs  commands.rs  damage.rs  hero.rs
logic/src/gamestate/commands/: attack.rs  cast.rs  defend.rs  move.rs  shoot.rs  wait.rs
logic/src/grid/: attack_direction.rs  gridpos.rs
macros/: Cargo.toml
macros/src/: lib.rs
scripts/: get_creature_stats.hy
src/: action_queue.rs  animation.rs  battlefields.rs  battlestate.rs  choreographer.rs  command.rs  creature.rs  creature_stack.rs  creatures.rs  functions.rs  gridpos.rs  hero.rs  main.rs  skills.rs  time_progress.rs  tweening.rs
src/battle/: battlestate.rs  creature.rs  gridpos.rs  mod.rs
src/creature/: mod.rs  (+5 more)
(+40 files in other folders)
