[package]
name = "homm"
version = "0.1.0"
authors = ["cheaterok <1cheaterok1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.14"
sdl2 = "0.34.1"
either = "1.5.3"
strum = "0.19.2"
strum_macros = "0.19"
itertools = "0.9.0"
pathfinding = "2.0.4"
num-traits = "0.2"
num-derive = "0.3"
