[package]
name = "game"
version = "0.1.0"
authors = ["cheaterok <1cheaterok1@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["ttf"]

[dependencies]
strum = "0.24"
strum_macros = "0.24"
ron = "0.7"
serde = { version = "1", features = ["derive"] }
either = "1.8.1"

formats = { path = "../formats" }
gamedata = { path = "../gamedata" }
gridpos = { path = "../gridpos" }
