[package]
name = "game"
version = "0.1.0"
authors = ["cheaterok <1cheaterok1@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["ttf", "mixer"]

[dependencies.rand]
version = "0.8.5"
features = ["small_rng"]

[dependencies]
strum = "0.25"
strum_macros = "0.25"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
egui = { version = "0.24.1", default-features = false }

formats = { path = "../formats" }
gamedata = { path = "../gamedata" }
