[package]
name = "logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO: remove SDL2 dependency from logic
[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["ttf", "mixer"]

[dependencies.rand]
version = "0.8.5"
features = ["small_rng"]

[dependencies]
strum = "0.25"
strum_macros = "0.25"
ron = "0.8" # TODO: move to client
serde = { version = "1", features = ["derive"] }
gamedata = { path = "../gamedata" }
common = { path = "../common" }
